# advent_of_code_2022

./: README.md  setup.py
adv_of_code/: pyproject.toml
adv_of_code_2022.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
